# panos-editor

./: .gitignore  LICENSE  cli.py  mkdocs.yml  pyproject.toml
.github/workflows/: app.yml
docs/: index.md
docs/query/: types.md
docs/usage/: basic.md
panos_editor/commands/: main.py  show.py  utils.py
panos_editor/inventory/: base.py  errors.py  file.py  loader.py
panos_editor/output/: table.py
panos_editor/parser/: query.py  query_functions.py  xml.py
panos_editor/query/: functions.py  lang.py  query_functions.py
panos_editor/tests/: fixtures.py  test_output_table.py  test_parser_query.py  test_parser_xml.py  test_query_lang.py
panos_editor/tests/test_data/: dummy.xml  lab.xml
