[tool.poetry]
name = "panos-editor"
version = "0.1.0"
description = ""
authors = ["Adam Baumeister <abigserve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.2.2"
pydantic = "^2.8.2"
coverage = "^7.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
