[tool.poetry]
name = "panos-editor"
version = "0.1.0"
description = ""
authors = ["Adam Baumeister <abigserve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.2.2"
pydantic = "^2.8.2"
coverage = "^7.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
pyparsing = "^3.1.2"
typer = "^0.12.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
